User tabel and services added

--- a/src/app/master/master.component.html
+++ b/src/app/master/master.component.html
@@ -8,70 +8,30 @@
   <mat-sidenav #sideNav mode="side">
     <mat-nav-list>
       <mat-list-item routerLink="/home">
-        <svg class="mx-2" height="20pt" width="20pt" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
-          <path d="M503.401,228.884l-43.253-39.411V58.79c0-8.315-6.741-15.057-15.057-15.057H340.976c-8.315,0-15.057,6.741-15.057,15.057
-			v8.374l-52.236-47.597c-10.083-9.189-25.288-9.188-35.367-0.001L8.598,228.885c-8.076,7.36-10.745,18.7-6.799,28.889
-			c3.947,10.189,13.557,16.772,24.484,16.772h36.689v209.721c0,8.315,6.741,15.057,15.057,15.057h125.913
-			c8.315,0,15.057-6.741,15.057-15.057V356.931H293v127.337c0,8.315,6.741,15.057,15.057,15.057h125.908
-			c8.315,0,15.057-6.741,15.056-15.057V274.547h36.697c10.926,0,20.537-6.584,24.484-16.772
-			C514.147,247.585,511.479,236.245,503.401,228.884z M433.965,244.433c-8.315,0-15.057,6.741-15.057,15.057v209.721h-95.793
-			V341.874c0-8.315-6.742-15.057-15.057-15.057H203.942c-8.315,0-15.057,6.741-15.057,15.057v127.337h-95.8V259.49
-			c0-8.315-6.741-15.057-15.057-15.057H36.245l219.756-200.24l74.836,68.191c4.408,4.016,10.771,5.051,16.224,2.644
-			c5.454-2.41,8.973-7.812,8.973-13.774V73.847h74.002v122.276c0,4.237,1.784,8.276,4.916,11.13l40.803,37.18H433.965z" />
-        </svg>
-
+        <img src="../../assets/home.svg" class="mx-2">
         Home
       </mat-list-item>
     </mat-nav-list>
 
     <mat-nav-list>
       <mat-list-item routerLink="/users">
+        <img src="../../assets/users.svg" class="mx-2">
 
-        <svg class="mx-2" height="20pt" width="20pt" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
-          <path
-            d="m525.97 357.643c-46.33-26.637-99.039-41.794-153.635-45.853 11.183 5.004 22.433 9.894 33.024 15.982 12.314 7.087 22.187 17.315 29.448 29.181 25.95 7.207 50.903 17.275 74.023 30.56 4.844 2.792 7.855 8.393 7.855 14.633v80.093h-68.891v34.446h86.114c9.52 0 17.223-7.703 17.223-17.223v-97.316c.001-18.551-9.653-35.605-25.161-44.503z" />
-          <path
-            d="m388.187 357.643c-108.416-62.332-254.608-62.332-363.026 0-15.524 8.931-25.161 25.969-25.161 44.504v97.316c0 9.52 7.703 17.223 17.223 17.223h378.902c9.52 0 17.223-7.703 17.223-17.223v-97.333c0-18.518-9.637-35.556-25.161-44.487zm-9.284 124.597h-344.456v-80.093c0-6.24 3.011-11.841 7.871-14.633 98.022-56.344 230.692-56.344 328.714 0 4.861 2.792 7.871 8.393 7.871 14.616z" />
-          <path
-            d="m335.881 69.701c2.857-.299 5.687-.809 8.578-.809 47.481 0 86.114 38.634 86.114 86.114s-38.634 86.114-86.114 86.114c-2.889 0-5.719-.513-8.576-.812-7.308 11.035-16.254 20.732-26.065 29.549 11.216 3.454 22.79 5.708 34.641 5.708 66.469 0 120.56-54.09 120.56-120.56s-54.09-120.56-120.56-120.56c-11.853 0-23.427 2.254-34.643 5.708 9.811 8.819 18.757 18.513 26.065 29.548z" />
-          <path
-            d="m206.676 275.566c66.469 0 120.56-54.09 120.56-120.56s-54.09-120.56-120.56-120.56-120.56 54.09-120.56 120.56 54.091 120.56 120.56 120.56zm0-206.674c47.481 0 86.114 38.634 86.114 86.114s-38.634 86.114-86.114 86.114-86.114-38.634-86.114-86.114 38.634-86.114 86.114-86.114z" />
-        </svg>
         Users
       </mat-list-item>
     </mat-nav-list>
 
     <mat-nav-list>
       <mat-list-item routerLink="/router">
-        <svg class="mx-2" height="20pt" width="20pt" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
-          <path
-            d="m423.886 224c-48.52.05-87.96 39.8-87.91 88.62.02 26.67 13.31 57.07 39.5 90.37 18.69 23.77 37.21 40.29 37.99 40.98 6.077 5.395 15.224 5.358 21.26-.02.78-.69 19.27-17.25 37.92-41.05 20.008-25.543 39.33-58.126 39.33-90.45-.042-48.726-39.184-88.45-88.09-88.45zm.18 185.84c-21.86-22.2-56.06-63.98-56.09-97.25-.03-31.18 25.07-56.56 55.94-56.59 31.042 0 56.019 25.277 56.06 56.48.03 33.27-34.1 75.13-55.91 97.36z" />
-          <path
-            d="m423.976 288c-21.18 0-32.149 25.801-16.96 40.99 12.045 12.018 32.577 8.034 39.15-7.82 6.508-15.697-5.095-33.17-22.19-33.17z" />
-          <path
-            d="m77.396 219.96c6.063 5.382 15.188 5.391 21.26 0 .78-.69 19.29-17.23 37.96-41.01 26.15-33.33 39.41-63.74 39.41-90.42 0-48.81-39.48-88.53-88-88.53s-88 39.72-88 88.53c0 26.68 13.26 57.09 39.41 90.42 18.67 23.78 37.18 40.32 37.96 41.01zm10.63-187.96c30.88 0 56 25.36 56 56.53 0 33.28-34.18 75.11-56.01 97.32-21.84-22.17-55.99-63.94-55.99-97.32 0-31.17 25.12-56.53 56-56.53z" />
-          <circle cx="88.026" cy="88" r="24" />
-          <path
-            d="m448.136 487.98c.017 21.872-27.164 32.43-41.87 16.02h-334.24c-39.7 0-72-32.3-72-72s32.3-72 72-72h160.5c21.78 0 39.5-17.72 39.5-39.5s-17.72-39.5-39.5-39.5h-126.61c-14.83 16.366-41.873 5.928-41.89-15.98-.034-21.935 26.977-32.381 41.89-16.02h126.61c39.43 0 71.5 32.07 71.5 71.5s-32.07 71.5-71.5 71.5h-160.5c-22.06 0-40 17.94-40 40s17.94 40 40 40h334.23c14.885-16.426 41.847-5.81 41.88 15.98z" />
-        </svg>
+        <img src="../../assets/router.svg" class="mx-2">
+        
         Router</mat-list-item>
     </mat-nav-list>
 
     <mat-nav-list>
       <mat-list-item routerLink="/activity-log">
-        <svg class="mx-2" height="25pt" width="25pt" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 64 64" xml:space="preserve">
-          <path
-            d="M55,15H54V9a3,3,0,0,0-3-3H50V5a3,3,0,0,0-3-3H9A3,3,0,0,0,6,5V55a3,3,0,0,0,3,3h1v1a3,3,0,0,0,3,3H51a3,3,0,0,0,3-3V41h1a3,3,0,0,0,3-3V18A3,3,0,0,0,55,15ZM51,8a1,1,0,0,1,1,1v6H50V8ZM14,4h2V6.7l-.168-.252a1.039,1.039,0,0,0-1.664,0L14,6.7ZM8,55V5A1,1,0,0,1,9,4h3v6a1,1,0,0,0,1.832.555L15,8.8l1.168,1.752A1,1,0,0,0,18,10V4H47a1,1,0,0,1,1,1V15H17a3,3,0,0,0-3,3V38a3,3,0,0,0,3,3H48V55a1,1,0,0,1-1,1H9A1,1,0,0,1,8,55Zm44,4a1,1,0,0,1-1,1H13a1,1,0,0,1-1-1V58H47a3,3,0,0,0,3-3V41h2Zm4-21a1,1,0,0,1-1,1H17a1,1,0,0,1-1-1V18a1,1,0,0,1,1-1H55a1,1,0,0,1,1,1Z" />
-          <path d="M25,22H23V33a1,1,0,0,0,1,1h5V32H25Z" />
-          <path
-            d="M36,22H34a3,3,0,0,0-3,3v6a3,3,0,0,0,3,3h2a3,3,0,0,0,3-3V25A3,3,0,0,0,36,22Zm1,9a1,1,0,0,1-1,1H34a1,1,0,0,1-1-1V25a1,1,0,0,1,1-1h2a1,1,0,0,1,1,1Z" />
-          <path
-            d="M44,24h2a1,1,0,0,1,1,1h2a3,3,0,0,0-3-3H44a3,3,0,0,0-3,3v6a3,3,0,0,0,3,3h2a3,3,0,0,0,3-3V28a1,1,0,0,0-1-1H45v2h2v2a1,1,0,0,1-1,1H44a1,1,0,0,1-1-1V25A1,1,0,0,1,44,24Z" />
-        </svg>
+        <img src="../../assets/activity-log.svg" class="mx-2">
+        
         Activity-Log</mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
