--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,1 +1,39 @@
-<p>users works!</p>
+<div class="container-fluid mt-2">
+    <mat-card class=" mx-1">
+
+        <mat-card-header>
+            <mat-card-title>Users</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content class="mt-2">
+            <table mat-table [dataSource]="_User" class="mat-elevation-z1">
+                <ng-container matColumnDef="UserName">
+                    <th mat-header-cell *matHeaderCellDef>UserName</th>
+                    <td mat-cell *matCellDef="let element">{{element.UserName}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="UserFullName">
+                    <th mat-header-cell *matHeaderCellDef>UserFullName</th>
+                    <td mat-cell *matCellDef="let element">{{element.UserFullName}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="DateOfBirth">
+                    <th mat-header-cell *matHeaderCellDef>DateOfBirth </th>
+                    <td mat-cell *matCellDef="let element">{{element.DateOfBirth | date}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="Gender">
+                    <th mat-header-cell *matHeaderCellDef>Gender</th>
+                    <td mat-cell *matCellDef="let element">{{element.Gender}}</td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
+            </table>
+        </mat-card-content>
+        <mat-card-footer>
+
+        </mat-card-footer>
+
+    </mat-card>
+</div>
