Router Grid Added

--- a/src/app/activity-log/activity-log.component.html
+++ b/src/app/activity-log/activity-log.component.html
@@ -1,1 +1,8 @@
-<p>activity-log works!</p>
+<div class="container mt-5">
+    <div class="text-center">
+        <img src="../../assets/heartbeat.svg" alt="activities">
+        <br>
+        <span class="text-center">No Activities found yet.</span>
+
+    </div>
+</div>
