--- a/src/app/router/router.component.html
+++ b/src/app/router/router.component.html
@@ -1,1 +1,36 @@
-<p>router works!</p>
+<div class="container-fluid mt-2">
+    <mat-card class=" mx-1">
+
+        <mat-card-header>
+            <mat-card-title>Router</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content class="mt-2">
+            <table mat-table [dataSource]="_Role" class="mat-elevation-z1">
+                <ng-container matColumnDef="Role">
+                    <th mat-header-cell *matHeaderCellDef>RoleName</th>
+                    <td mat-cell *matCellDef="let element">{{element.Role}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef>Actions</th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-icon-button>
+                            <img src="../../assets/edit.svg" alt="">
+                        </button>
+                        <button mat-icon-button>
+                            <img src="../../assets/delete.svg" alt="">
+                        </button>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
+            </table>
+        </mat-card-content>
+        <mat-card-footer>
+
+        </mat-card-footer>
+
+    </mat-card>
+</div>
