--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,10 +1,5 @@
 <div class="container-fluid mt-2">
     <mat-card class=" mx-1">
-
-        <mat-card-header>
-            <mat-card-title>Users</mat-card-title>
-        </mat-card-header>
-        <mat-divider></mat-divider>
         <mat-card-content class="mt-2">
             <table mat-table [dataSource]="_User" class="mat-elevation-z1">
                 <ng-container matColumnDef="UserName">
@@ -44,7 +39,8 @@
             </table>
         </mat-card-content>
         <mat-card-footer>
-
+            <mat-paginator class="mat-elevation-z1" [length]="_User.length" [pageSizeOptions]="[5,10,15]">
+            </mat-paginator>
         </mat-card-footer>
 
     </mat-card>
