--- a/src/app/master/master.component.html
+++ b/src/app/master/master.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="priamry-color">
   <button mat-icon-button (click)="sideNav.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
